examples/test/testpolicy1663.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1663
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key31: value32
      key18: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value45
          key45: value0
          key27: value6
      podSelector:
        matchLabels:
          key30: value28
